Fix active positions list issue and set manual close option for unavailable positions in exchange

--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
 
             <div class="recent-signals">
                 <div class="positions-header">
-                    <h3>Recent Positions</h3>
+                    <h3>Active Positions</h3>
                     <button class="refresh-positions-btn" onclick="tradingForm.refreshPositions()" title="Refresh positions and P&L">
                         ↻
                     </button>
                 </div>
                 <div class="signal-list" id="signal-list">
-                    <p class="no-signals">No recent positions</p>
+                    <p class="no-signals">No active positions</p>
                 </div>
             </div>
 
